<resources>
    <string name="app_name">CovidMap</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibmZhY2g5OCIsImEiOiJja214aGkzd2Uwb3o1MnBtOWR0c3NyMGJvIn0.yIkMVzbHjJBHp7UHH4r4wQ</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="map">Peta</string>
    <string name="profile">Profil</string>
    <string name="history">Histori</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="security">Keamanan</string>
    <string name="logout">Logout</string>
    <string name="message_logout">Apakah Anda yakin ingin logout dari CovidMap?</string>
    <string name="cancel">Batal</string>
    <string name="change_avatar">Ubah Foto</string>
    <string name="update">Update</string>
    <string name="my_location">My Location</string>
    <string name="point_start">Titik awal</string>
    <string name="point_end">Tujuan</string>
    <string name="your_location">Lokasi anda</string>
    <string name="click_on_map">Klik pada peta</string>
    <string name="choose_location_on_map">Pilih lokasi pada peta</string>
</resources>