<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.map.MapFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraZoom="16"
        mapbox:mapbox_cameraTargetLat="-7.207624"
        mapbox:mapbox_cameraTargetLng="112.772128"/>

    <LinearLayout
        android:id="@+id/layout_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="12dp"
        android:background="@color/blue"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <EditText
            android:id="@+id/et_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/point_start"
            android:hint="@string/point_start"
            android:textColorHint="@color/md_grey_500"
            android:inputType="text"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_outline_circle_24"
            android:drawablePadding="12dp"/>

        <EditText
            android:id="@+id/et_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/point_end"
            android:hint="@string/point_end"
            android:textColorHint="@color/md_grey_500"
            android:inputType="text"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_location_on_yellow_24"
            android:drawablePadding="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="12dp"
            android:text="@string/choose_location_on_map"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/ok_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_check_24"
            app:tint="@color/yellow"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="20dp"
        android:background="@drawable/background_bottom_sheet"
        android:elevation="4dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp">

        <TextView
            android:id="@+id/tv_jalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            tools:text="AAAA" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            tools:text="1" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="12dp"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:layout_anchor="@id/fab_loc"
        app:layout_anchorGravity="end"
        app:tint="@color/blue"
        android:src="@drawable/ic_baseline_directions_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="12dp"
        app:layout_anchor="@id/layout_bottom_sheet"
        app:layout_anchorGravity="end"
        android:backgroundTint="@color/blue"
        android:contentDescription="@string/my_location"
        app:tint="@color/yellow"
        android:src="@drawable/ic_baseline_my_location_yellow_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>