<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">

    <View
        android:id="@+id/bg_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/blue"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_rounded_profile_blue"
        app:layout_constraintTop_toBottomOf="@id/bg_top"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bg_top"
        app:layout_constraintBottom_toBottomOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:elevation="12dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintDimensionRatio="1.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/drawable_person" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="12dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Nino"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="12dp"
            android:textSize="16sp"
            android:textColor="@color/blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="ninofach"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_change_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="@string/change_profile"
                    android:textColor="@color/blue_dark"
                    app:layout_constraintTop_toTopOf="parent"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_baseline_edit_24"
                    app:drawableTint="@color/blue_dark" />

                <View
                    android:id="@+id/line_1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_change_profile"/>

                <TextView
                    android:id="@+id/tv_security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="@string/security"
                    android:textColor="@color/blue_dark"
                    app:layout_constraintTop_toBottomOf="@id/line_1"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_baseline_lock_24"
                    app:drawableTint="@color/blue_dark" />

                <View
                    android:id="@+id/line_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_security"/>

                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="@string/logout"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_red_light"
                    app:layout_constraintTop_toBottomOf="@id/line_2"
                    android:drawablePadding="4dp"
                    app:drawableStartCompat="@drawable/ic_baseline_lock_24"
                    app:drawableTint="@android:color/holo_red_light" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>